src/test/deca/context/valid/test_pass_3_ifThenElse.deca
// Description:
//    Program testing pass 3 if then else
//
// Results:
//    ok
//
// History:
//    Created on 10/01/2025

{
    
    if (true){
    }
    else{

    }
}
